--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </select>
             </div>
 
-            <div class="wrap">
+            <div class="wrap wrap2">
                 <label for="Employee_Name">Employee Name</label>
                 <select name="" id="">
                     <option value=""> Select Employee Name</option>
